--- a/ann.ipynb
+++ b/ann.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c1eac373",
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow \n",
     "from tensorflow import keras\n",
-    "from tensorflow.keras import Sequential "
+    "from tensorflow.keras import Sequential \n"
    ]
   },
   {
@@ -24,11 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cf386c6c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "code",
