--- a/ann.ipynb
+++ b/ann.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c1eac373",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "585c8c8c",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "cf386c6c",
    "metadata": {},
    "outputs": [],
@@ -37,24 +37,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3869e4ba",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('heart.csv')\n",
+    "df.describe()\n",
+    "print(len(df.columns))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "d676d78e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = keras.models.Sequential(\n",
+    "    [\n",
+    "    keras.Input(shape=(14, 14)),   \n",
+    "    keras.layers.Flatten(),         \n",
+    "    keras.layers.Dense(64, activation='relu'),\n",
+    "    keras.layers.Dense(10, activation='softmax')\n",
+    "\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "59eca958",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  \\\n",
+      "0     63    1   3       145   233    1        0      150      0      2.3   \n",
+      "1     37    1   2       130   250    0        1      187      0      3.5   \n",
+      "2     41    0   1       130   204    0        0      172      0      1.4   \n",
+      "3     56    1   1       120   236    0        1      178      0      0.8   \n",
+      "4     57    0   0       120   354    0        1      163      1      0.6   \n",
+      "..   ...  ...  ..       ...   ...  ...      ...      ...    ...      ...   \n",
+      "298   57    0   0       140   241    0        1      123      1      0.2   \n",
+      "299   45    1   3       110   264    0        1      132      0      1.2   \n",
+      "300   68    1   0       144   193    1        1      141      0      3.4   \n",
+      "301   57    1   0       130   131    0        1      115      1      1.2   \n",
+      "302   57    0   1       130   236    0        0      174      0      0.0   \n",
+      "\n",
+      "     slope  ca  thal  \n",
+      "0        0   0     1  \n",
+      "1        0   0     2  \n",
+      "2        2   0     2  \n",
+      "3        2   0     2  \n",
+      "4        2   0     2  \n",
+      "..     ...  ..   ...  \n",
+      "298      1   0     3  \n",
+      "299      1   0     3  \n",
+      "300      1   2     3  \n",
+      "301      1   1     3  \n",
+      "302      1   1     2  \n",
+      "\n",
+      "[303 rows x 13 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X= df.iloc[:,:-1]\n",
+    "y = df.iloc[:,:-1]\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "154804ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train,x_test,y_train,y_test = train_test_split(X,y,train_size=0.8)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "154804ed",
+   "id": "0198c0cf",
    "metadata": {},
    "outputs": [],
    "source": []
