--- a/ann.ipynb
+++ b/ann.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 249,
    "id": "c1eac373",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 250,
    "id": "585c8c8c",
    "metadata": {},
    "outputs": [],
@@ -24,12 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 251,
    "id": "cf386c6c",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score\n",
     "import pandas as pd\n",
     "import numpy as np"
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 252,
    "id": "3869e4ba",
    "metadata": {},
    "outputs": [
@@ -45,97 +47,204 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14\n"
+      "Index(['age', 'sex', 'cp', 'trestbps', 'chol', 'fbs', 'restecg', 'thalach',\n",
+      "       'exang', 'oldpeak', 'slope', 'ca', 'thal', 'target'],\n",
+      "      dtype='object')\n"
      ]
     }
    ],
    "source": [
     "df = pd.read_csv('heart.csv')\n",
     "df.describe()\n",
-    "print(len(df.columns))"
+    "print((df.columns))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 253,
    "id": "d676d78e",
    "metadata": {},
    "outputs": [],
    "source": [
     "model = keras.models.Sequential(\n",
     "    [\n",
-    "    keras.Input(shape=(14, 14)),   \n",
-    "    keras.layers.Flatten(),         \n",
+    "    keras.Input(shape=(13,)),           \n",
     "    keras.layers.Dense(64, activation='relu'),\n",
-    "    keras.layers.Dense(10, activation='softmax')\n",
-    "\n",
+    "    keras.layers.Dropout(0.3),\n",
+    "    keras.layers.Dense(64, activation='relu'),\n",
+    "    keras.layers.Dropout(0.3),\n",
+    "    keras.layers.Dense(32, activation='relu'),\n",
+    "    keras.layers.Dropout(0.3),\n",
+    "    keras.layers.Dense(1, activation='sigmoid')\n",
     "    ]\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 254,
    "id": "59eca958",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.iloc[:, :-1].values     \n",
+    "y = df.iloc[:, -1].values\n",
+    "y = y.reshape(-1, 1)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "id": "154804ed",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  \\\n",
-      "0     63    1   3       145   233    1        0      150      0      2.3   \n",
-      "1     37    1   2       130   250    0        1      187      0      3.5   \n",
-      "2     41    0   1       130   204    0        0      172      0      1.4   \n",
-      "3     56    1   1       120   236    0        1      178      0      0.8   \n",
-      "4     57    0   0       120   354    0        1      163      1      0.6   \n",
-      "..   ...  ...  ..       ...   ...  ...      ...      ...    ...      ...   \n",
-      "298   57    0   0       140   241    0        1      123      1      0.2   \n",
-      "299   45    1   3       110   264    0        1      132      0      1.2   \n",
-      "300   68    1   0       144   193    1        1      141      0      3.4   \n",
-      "301   57    1   0       130   131    0        1      115      1      1.2   \n",
-      "302   57    0   1       130   236    0        0      174      0      0.0   \n",
-      "\n",
-      "     slope  ca  thal  \n",
-      "0        0   0     1  \n",
-      "1        0   0     2  \n",
-      "2        2   0     2  \n",
-      "3        2   0     2  \n",
-      "4        2   0     2  \n",
-      "..     ...  ..   ...  \n",
-      "298      1   0     3  \n",
-      "299      1   0     3  \n",
-      "300      1   2     3  \n",
-      "301      1   1     3  \n",
-      "302      1   1     2  \n",
-      "\n",
-      "[303 rows x 13 columns]\n"
+      "(242, 13)\n",
+      "(242, 1)\n"
      ]
     }
    ],
    "source": [
-    "X= df.iloc[:,:-1]\n",
-    "y = df.iloc[:,:-1]\n",
-    "print(y)"
+    "x_train,x_test,y_train,y_test = train_test_split(X,y,train_size=0.8)\n",
+    "print(x_train.shape)\n",
+    "print(y_train.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "154804ed",
+   "execution_count": 256,
+   "id": "0198c0cf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train,x_test,y_train,y_test = train_test_split(X,y,train_size=0.8)\n"
+    "model.compile(\n",
+    "    optimizer='sgd',\n",
+    "    loss='binary_crossentropy',\n",
+    "    metrics=['accuracy']\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0198c0cf",
+   "id": "3e0bb419",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.30673412 -1.4500221  -0.99235508 ...  0.94336538  0.24525697\n",
+      "  -0.42643929]\n",
+      " [ 0.52798495  0.68964466  0.96008337 ... -0.68730907  0.24525697\n",
+      "  -2.03891287]\n",
+      " [ 0.41735953  0.68964466 -0.01613585 ... -0.68730907 -0.72772971\n",
+      "  -0.42643929]\n",
+      " ...\n",
+      " [ 0.74923579  0.68964466 -0.99235508 ... -0.68730907  0.24525697\n",
+      "  -0.42643929]\n",
+      " [-1.13139633  0.68964466 -0.01613585 ...  0.94336538 -0.72772971\n",
+      "  -0.42643929]\n",
+      " [ 0.41735953 -1.4500221  -0.01613585 ...  0.94336538  1.21824366\n",
+      "  -0.42643929]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sc = StandardScaler()\n",
+    "x_train = sc.fit_transform(x_train)\n",
+    "x_test = sc.transform(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "id": "ec01cd09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 50ms/step - accuracy: 0.5751 - loss: 0.7390 - val_accuracy: 0.6327 - val_loss: 0.6958\n",
+      "Epoch 2/10\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 24ms/step - accuracy: 0.5397 - loss: 0.7195 - val_accuracy: 0.6327 - val_loss: 0.6900\n",
+      "Epoch 3/10\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 18ms/step - accuracy: 0.5300 - loss: 0.6975 - val_accuracy: 0.6327 - val_loss: 0.6848\n",
+      "Epoch 4/10\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 17ms/step - accuracy: 0.5541 - loss: 0.7443 - val_accuracy: 0.5714 - val_loss: 0.6797\n",
+      "Epoch 5/10\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 16ms/step - accuracy: 0.5754 - loss: 0.7102 - val_accuracy: 0.5714 - val_loss: 0.6756\n",
+      "Epoch 6/10\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 21ms/step - accuracy: 0.5519 - loss: 0.7156 - val_accuracy: 0.6122 - val_loss: 0.6706\n",
+      "Epoch 7/10\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - accuracy: 0.5698 - loss: 0.6726 - val_accuracy: 0.6122 - val_loss: 0.6677\n",
+      "Epoch 8/10\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 16ms/step - accuracy: 0.4931 - loss: 0.7075 - val_accuracy: 0.6327 - val_loss: 0.6623\n",
+      "Epoch 9/10\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step - accuracy: 0.5824 - loss: 0.6543 - val_accuracy: 0.6327 - val_loss: 0.6593\n",
+      "Epoch 10/10\n",
+      "\u001b[1m7/7\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 14ms/step - accuracy: 0.6768 - loss: 0.6087 - val_accuracy: 0.6327 - val_loss: 0.6575\n",
+      "\u001b[1m2/2\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 61ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.fit(x_train,y_train,epochs=10,batch_size=31,validation_split=0.2)\n",
+    "y_pred = model.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "id": "778d3cd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7213114754098361\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = (y_pred > 0.5).astype(int)\n",
+    "print(accuracy_score(y_pred,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "id": "543a199d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression Accuracy: 0.9016393442622951\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\SOUNAK\\AppData\\Roaming\\Python\\Python312\\site-packages\\sklearn\\utils\\validation.py:1310: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr = LogisticRegression(random_state=42, max_iter=200)\n",
+    "lr.fit(x_train, y_train)\n",
+    "y_pred_lr = lr.predict(x_test)\n",
+    "print(\"Logistic Regression Accuracy:\", accuracy_score(y_test, y_pred_lr))"
+   ]
   }
  ],
  "metadata": {
